# langchain-skim

./: .gitignore  README.md  pyproject.toml
langchain_skim/: __init__.py  tool.py
tests/: test_tool.py
