[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-skim"
version = "0.1.0"
description = "LangChain tool for Skim — clean web reader for AI agents. Pays $0.002/call in USDC over x402. No signup, no API keys."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Skim", email = "hello@skim402.com" }]
keywords = [
    "langchain",
    "x402",
    "skim",
    "ai",
    "agent",
    "reader",
    "markdown",
    "web-scraping",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3.0",
    "x402[evm]>=2.0.0",
    "requests>=2.31.0",
    "eth-account>=0.13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://skim402.com"
Documentation = "https://skim402.com/docs"
Repository = "https://github.com/JessieJanie/langchain-skim"
"x402 protocol" = "https://x402.org"

[tool.hatch.build.targets.wheel]
packages = ["langchain_skim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
